// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing toBeFunction should return false for [ '' ] 1`] = `
"    
    expected should be an function.
    got: array
"
`;

exports[`testing toBeFunction should return false for 1 1`] = `
"    
    expected should be an function.
    got: number
"
`;

exports[`testing toBeFunction should return false for 4141 1`] = `
"    
    expected should be an function.
    got: string
"
`;

exports[`testing toBeFunction should return false for a function when isNot true 1`] = `
"    
    expect value to not be a function.
    received: 'function'
"
`;
